--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-filter-bar></app-filter-bar>
+<app-product-list></app-product-list>
 <router-outlet></router-outlet>
