--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,17 +1,10 @@
 <div>
     <div class="products">
-        <div class="product-list-container">
-   <div *ngFor="let product of productsData; let i = index" class="product-container">
+           <div class="product-list-container">
+   <div *ngFor="let product of productsData;" class="product-container">
      <div class="item-card">
-            <div class="itemImage">
-                <img src={{product.imageLink}} alt="product image"  class="image">
-            </div>
-            <div>
-                {{product.name}}
-            </div>
-            <div>
-           MRP {{product.price}} /-
-            </div>
+         <app-product-card [product]="product"></app-product-card>
+
         </div>
        </div>
    </div> 
