feat:add shopping cart page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class=headerStyle>
-    <div class="shoppingCartIcon">
+    <div class="shoppingCartIcon" [routerLink]="['/cart']" >
     <fa-icon class="far" [icon]="faShoppingCart"></fa-icon>
 </div>
 </div>
